--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./css/styles.css" rel="stylesheet" type="text/css" />
   <title>Piedra, papel, tijera</title>
+  <link href="./css/styles.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-  <button class="boton-jugada" data-jugada="piedra">Piedra</button>
-  <button class="boton-jugada" data-jugada="papel">Papel</button>
-  <button class="boton-jugada" data-jugada="tijera">Tijera</button>
-  <div id="resultados"></div>
-  <p id="contador-usuario">Tus puntos: 0</p>
-  <p id="contador-ordenador">Puntos de la máquina: 0</p>
+  <button class="boton-jugada" data-jugada="piedra">Piedra ✊</button>
+  <button class="boton-jugada" data-jugada="papel">Papel 🖐️</button>
+  <button class="boton-jugada" data-jugada="tijera">Tijera ✌️</button>
+  <section class="container">
+    <div id="resultados"></div>
+    <p id="contador-usuario">Tus puntos: 0</p>
+    <p id="contador-ordenador">Puntos de la máquina: 0</p>
+  </section>
+
   <script src="./js/script.js"></script>
 </body>
+
 </html>
